--- a/TODO
+++ b/TODO
@@ -1,9 +1,5 @@
-Test output with different families
-Test output with bootstrap method mode approximation
-Test with and without gradient computation
-Add function to approximate Hessian
+Test output with bootstrap method
 Add smoothing method
 Test output with offsets and weights
-Use kernal approximation method
 Better `logLik` method implementation
-Test method works when there are time points with no observations
+Test that method works when there are time points with no observations
