--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ Test output with bootstrap method
 Add smoothing method
 Better `logLik` method implementation
 Test that method works when there are time points with no observations
+Make better Laplace approximation implementation
